Do not break stop list on small screens

--- a/app/assets/stylesheets/plannings.css.scss
+++ b/app/assets/stylesheets/plannings.css.scss
@@ -777,7 +777,12 @@ $sidebar-margins: 10px;
         }
 
         >li {
-          height: 34px;
+          @media screen and (min-width: 992px) {
+            height: 34px;
+          }
+          @media screen and (max-width: 991px) {
+            height: 68px;
+          }
           padding: 2px 2px 2px 6px;
 
           .fa-reorder {
